--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: 计算机网
 description: > # this means to ignore newlines until "baseurl:"
  Ashwathama is a minimal website with an app like design. It also features card layouts for website elements.
-baseurl: "/ashwath" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://yzhzeng.github.io/myblog/"
 permalink: :title/
 full-url: "http://yzhzeng.github.io/myblog/" # the base hostname & protocol for your site
