--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ url: "http://yzhzeng.github.io/myblog/"
 permalink: :title/
 full-url: "http://yzhzeng.github.io/myblog/" # the base hostname & protocol for your site
 paginate: 1
+paginate_path: "/life/page:1/"
 
 # CSS
 sass:
