--- a/_config.yml
+++ b/_config.yml
@@ -61,5 +61,5 @@ gems:
   - jekyll-paginate
 
 
-previous_page:       下一页
-next_page:           上一页
+previous_page:       上一页
+next_page:           下一页
