--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://yzhzeng.github.io/myblog/"
 permalink: :title/
 full-url: "http://yzhzeng.github.io/myblog/" # the base hostname & protocol for your site
-paginate: 3
-paginate_path: "/page:num/"
+paginate: 1
+paginatepath: ['/page/:num','/life/page/:num']
 
 # CSS
 sass:
