--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,18 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
 
+source:       .
+destination:  ./_site
+plugins_dir:  ./_plugins
+layouts_dir:  ./_layouts
+data_dir:     ./_data
+includes_dir: ./_includes
+posts_dir: ./_posts
+#collections:  null
+
+
+
+
 # Site settings
 title: 计算机网
 description: > # this means to ignore newlines until "baseurl:"
