--- a/_config.yml
+++ b/_config.yml
@@ -70,8 +70,7 @@ author:
   
 gems: 
   - jekyll-seo-tag
-#  - jekyll-paginate
-  - jekyll-paginate-plugin
+  - jekyll-paginate
 
 previous_page:       上一页
 next_page:           下一页
